# cli-ai

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/cli_ai/: api_client.py  config.py  main.py  memory.py  repl.py  tools.py  vectorstore.py
src/cli_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_api_client.py
